update index.html content

--- a/index.html
+++ b/index.html
@@ -43,16 +43,19 @@
         <h1>Welcome to My GitHub Pages Site</h1>
     </header>
     <div class="container">
+
         <h2>About Me</h2>
         <p>I'm a solo engineer passionate about coding and building innovative applications.</p>
+     <!-- 
         <h2>Projects</h2>
         <ul>
             <li><a href="#">Project 1</a></li>
             <li><a href="#">Project 2</a></li>
             <li><a href="#">Project 3</a></li>
         </ul>
+      -->
         <h2>Contact Me</h2>
-        <p>Email: <a href="mailto:me@example.com">me@example.com</a></p>
+        <p>Email: <a href="mailto:r2k0ai@duck.com">r2k0ai@duck.com</a></p>
     </div>
 </body>
 </html>
