--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
         <p>I'm an indie developer.</p>
         <h2>Links</h2>
         <ul>
-            <li><a href="https://www.youtube.com/@r2k0ai/">Yotube</a></li>
+            <li><a href="https://www.youtube.com/@r2k0ai/">Youtube</a></li>
             <li><a href="https://rumble.com/c/c-5726757">Rumble</a></li>
+            <li><a href="https://ko-fi.com/r2k0ai">ko-fi</a></li>
         </ul>
         <h2>Contact Me</h2>
         <p>Email: <a href="mailto:r2k0ai@duck.com">r2k0ai@duck.com</a></p>
