--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     <div class="container">
 
         <h2>About Me</h2>
-        <p>I am a passionate solo engineer with a focus on developing innovative applications that leverage AI, ML, and NLP technologies. With a strong background in Python, Rust, and other modern languages, I specialize in crafting solutions that merge cutting-edge technology with user-centric design. My projects range from creating on-device AI assistants to developing WebAssembly applications for personal productivity. I am constantly seeking new challenges and ways to improve, always pushing the boundaries of what's possible in the world of software engineering.</p>
+        <p>I am a solo engineer with a focus on developing innovative applications 
+            that leverage AI, ML, and NLP technologies.</p>
         <h2>Links</h2>
         <ul>
             <li><a href="https://www.youtube.com/@r2k0ai/">Youtube</a></li>
