--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
     <div class="container">
 
         <h2>About Me</h2>
-        <p>I am a solo engineer with a focus on developing innovative applications 
-            that leverage AI, ML, and NLP technologies.</p>
+        <p>A solo engineer with a passion for creating apps that respect user privacy.</p>
         <h2>Links</h2>
         <ul>
             <li><a href="https://www.youtube.com/@r2k0ai/">Youtube</a></li>
