--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to My GitHub Pages Site</title>
+    <title>r2k0ai</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -40,12 +40,12 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to r2k0ai GitHub Pages</h1>
+        <h1>Hello Hola 你好 नमस्ते مرحبا မင်္ဂလာပါ こんにちは สวัสดีครับ/ค่ะ</h1>
     </header>
     <div class="container">
 
         <h2>About Me</h2>
-        <p>A solo engineer with a passion for creating apps that respect user privacy.</p>
+        <p>Indie engineer with a passion for creating apps that respect user privacy.</p>
         <h2>Links</h2>
         <ul>
             <li><a href="https://www.youtube.com/@r2k0ai/">Youtube</a></li>
