--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <header>
-        <h2>Hello Hola 你好 नमस्ते مرحبا မင်္ဂလာပါ こんにちは สวัสดีครับ/ค่ะ</h2>
+        <h2>Hello Hola 你好 नमस्ते مرحبا မင်္ဂလာပါ こんにちは สวัสดีครับ</h2>
     </header>
     <div class="container">
 
