--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container">
 
         <h2>About Me</h2>
-        <p>Indie engineer with a passion for creating apps that respect user privacy.</p>
+        <p>Polyglot technologist passionate about AI, ML, and data science. Specializing in user-centric applications, I create practical solutions to enhance user experiences. Join me on my journey of exploring the latest technologies and developing innovative projects.</p>
         <h2>Links</h2>
         <ul>
             <li><a href="https://www.youtube.com/@r2k0ai/">Youtube</a></li>
