--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
     <div class="container">
 
         <h2>About Me</h2>
-        <p>Polyglot technologist passionate about AI, ML, and data science. Specializing in user-centric applications, I create practical solutions to enhance user experiences. Join me on my journey of exploring the latest technologies and developing innovative projects.</p>
+        <p>Polyglot technologist.</p>
         <h2>Links</h2>
         <ul>
-            <li><a href="https://www.youtube.com/@r2k0ai/">Youtube</a></li>
-            <li><a href="https://rumble.com/c/c-5726757">Rumble</a></li>
-            <li><a href="https://ko-fi.com/r2k0ai">ko-fi</a></li>
+            <li><a href="https://ko-fi.com/r2k0ai">Become a supporter.</a></li>
+            <li><a href="https://www.youtube.com/@r2k0ai/">Youtube.</a></li>
+            <li><a href="https://rumble.com/c/c-5726757">Rumble.</a></li>
             <li><a href="https://r2k0ai.medium.com/">Medium</a></li>
         </ul>
         <h2>Contact Me</h2>
